[package]
name = "viator"
version = "0.1.0"
edition = "2024"
description = """
    Viator -- A modern C/C++ build system.
"""

[dependencies]
anyhow = "1.0.100"
clap = { version = "4.5.53", features = ["derive"] }
hashbrown = { version = "0.16.1", features = ["serde"] }
mlua = { version = "0.11.5", features = ["lua54", "anyhow", "serde"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
tokio = "1.48.0"

