[package]
name = "viator"
version = "0.1.0"
edition = "2024"
description = """
    Viator -- A modern C/C++ build system.
"""

[workspace]
resolver = "3"
members = ["viator-autolua", "viator-utils"]

[dependencies]
anyhow = "1.0.100"
clap = { version = "4.2.0", features = ["derive"] }
cve-rs = "0.7.0"
hashbrown = { version = "0.16.1", features = ["serde"] }
mlua = { version = "0.11.5", features = ["lua54", "anyhow", "serde"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
tokio = "1.48.0"
viator-autolua = { path = "viator-autolua" }
viator-utils = { path = "viator-utils", features = ["hashbrown", "lua"] }

