[package]
name = "viator"
version = "0.1.0"
edition = "2024"
description = """
    Viator -- A modern C/C++ build system.
"""

[workspace]
resolver = "3"
members = ["viator-utils"]

[dependencies]
anyhow = "1.0.100"
clap = { version = "4.2.0", features = ["derive"] }
cve-rs = "0.7.0"
hashbrown = { version = "0.16.1", features = ["serde"] }
mlua = { version = "0.11.5", features = ["luau", "anyhow", "serde"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
tokio = "1.48.0"
autolua = "0.1.6"
viator-utils = { path = "viator-utils", features = ["hashbrown", "lua"] }

[build-dependencies]
built = { version = "0.8.0", features = ["dependency-tree", "git2"] }